# universal-app-template

./: .commitlintrc.js  .czrc  .dockerignore  .gitignore  .prettierignore  .prettierrc  .yarnrc.yml  Cargo.toml  README.md  nx.json  package.json  project.json  rust-toolchain.toml  tsconfig.base.json
.github/workflows/: ci.yml
.husky/: commit-msg  post-checkout  pre-commit  prepare-commit-msg
.storybook/: main.ts
apps/.storybook/mobile/: app.config.js  babel.config.js  doctools.js  main.js  metro.config.js  package.json  preview.js  project.json  storybook.requires.js  tailwind.config.js  tsconfig.json
apps/.storybook/web/demo/: main.ts  postcss.config.js  preview.ts  project.json  tailwind.config.js
apps/.storybook/web/landing/: main.ts  postcss.config.js  (+4 more)
apps/api/: Cargo.toml  project.json
apps/api/src/: main.rs
apps/docs/: docusaurus.config.js  project.json
apps/src-tauri/demo/: Cargo.toml  project.json  tauri.conf.json
libs/api/node-api-wrapper/: .eslintrc.json  README.md  jest.config.ts  package.json  project.json  tsconfig.lib.json
libs/shared/: jest.config.ts  package.json  project.json  test-setup.ts  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json
libs/shared/src/: index.ts
libs/test/: README.md  babel.config.json  jest.config.ts  package.json  project.json
libs/test/src/: fixTestingConsoleError.ts  index.ts
libs/utils/: .eslintrc.json  jest.config.ts  package.json  project.json  tsconfig.lib.json
libs/utils/src/: log.ts
tools/models/: api.proto
tools/scripts/: ci.sh  component.sh  debug.sh  deploy.sh  full.sh  page.sh
(+109 files in other folders)
