[package]
name = "desktop-demo"
default-run = "desktop-demo"
description = "Desktop App Demo"
version = "0.0.1"
rust-version = "1.59"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri = { version = "1.2.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
